methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: reassignment to val
    versLAvant=true
              ^MethodsArgs:7: error: reassignment to val
    versLAvant=false
              ^MethodsArgs:11: error: reassignment to val
  nbPas=6-Y
       ^MethodsArgs:18: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-0 to nbPas){
          ^MethodsArgs:17: error: type mismatch;
 found   : Unit
 required: Int
  if(versLAvant==false){
  ^